bug fix img not cropped if image is long

--- a/style.css
+++ b/style.css
@@ -112,6 +112,7 @@
 
 .card-front > img {
     width: 100% ;
+    max-height: 300px;
     object-fit: cover;
 }
 
